Stopped header flicker

--- a/src/routes/skills/skills.css
+++ b/src/routes/skills/skills.css
@@ -12,17 +12,14 @@
 }
 
 .tree-grid > .tree-1-active {
-    animation: fadeIn var(--items-transition-speed) forwards;
     background-image: radial-gradient(circle, #A5410077, #14141400, #14141400);
 }
 
 .tree-grid > .tree-2-active {
-    animation: fadeIn var(--items-transition-speed) forwards;
     background-image: radial-gradient(circle, #420E5177, #14141400, #14141400);
 }
 
 .tree-grid > .tree-3-active {
-    animation: fadeIn var(--items-transition-speed) forwards;
     background-image: radial-gradient(circle, #47701077, #14141400, #14141400);
 }
 
@@ -44,8 +41,6 @@
     width: 80%;
     justify-content: center;
     text-transform: uppercase;
-
-    animation: fadeIn var(--items-transition-speed) forwards;
 
     background: var(--color-purple-dark);
     box-shadow: 0 6px 0px 0px rgb(0 0 0 / 50%), 0px 20px 20px 0px rgb(0 0 0 / 20%);
